--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -83,7 +83,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 \cventry{2013-2014}{Social Science Chair}{}{$\text{IV}\cdot\Omega$ Academic Society}{}{
 \begin{itemize}%
-\item Organized social science mini-lectures; presented recent advances about social science.
+\item Organized social science mini-lectures; presented recent advances in social science.
 \end{itemize}
 }
 
@@ -97,7 +97,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 \section{Honors \& Awards}
 \cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{Psychology Department}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
-\cventry{2014}{International Undergraduate Writing Contest, 3\ts{rd} Place}{}{English Department}{}{}
+\cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{English Department}{}{}
 \cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
 \cventry{2014}{Margaret and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
 \cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
@@ -109,8 +109,8 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 
 \section{Technical Skills}
-\cvitem{Advanced}{Matlab, Python, Java, Git}
-\cvitem{Intermediate}{R, Linux, LENS, SPSS, \LaTeX}
+\cvitem{Advanced}{Matlab, Python, Java, GitHub}
+\cvitem{Intermediate}{R, LENS, SPSS, Linux, \LaTeX}
 
 \section{Professional Affiliation}
 \cvitem{2014-present}{Cognitive Neuroscience Society}
