--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -38,19 +38,8 @@
 Personal Page: \href{https://qihongl.github.io/}{https://qihongl.github.io/}
 \\
 Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
-}                 % optional, remove / comment
-% \photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
-% \quote{Some quote}                                 % optional, remove / comment the line if not wanted
+}
 
-% to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
-%\makeatletter
-%\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
-%\makeatother
-%\renewcommand*{\bibliographyitemlabel}{[\arabic{enumiv}]}% CONSIDER REPLACING THE ABOVE BY THIS
-
-% bibliography with mutiple entries
-%\usepackage{multibib}
-%\newcites{book,misc}{{Books},{Others}}
 %----------------------------------------------------------------------------------
 %            content
 %----------------------------------------------------------------------------------
@@ -165,7 +154,12 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cventry{2014}{Intro to Computer Science \& Programming Using Python}{Coursera}{}{MIT}{}
 \cventry{2015}{The Brain and Space}{Coursera}{}{Duke University}{}
 \cventry{2016}{Statistical Learning}{Stanford Online}{}{Stanford University}{}
-\cventry{2016}{Build a Computer from 1\ts{st} Principles}{Coursera}{}{Hebrew University of Jerusalem}{}
+\cventry{2016}{Build a Computer from 1\ts{st} Principles}{Coursera}{}{Hebrew University of Jerusalem}{
+\begin{flushright}
+(Certificates available upon request)
+\end{flushright}
+}
+
 
 
 \end{document}
