--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -101,7 +101,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \cvitem{Advanced}{Matlab, Python, Java, GitHub}
 \cvitem{Intermediate}{R, LENS, SPSS, Linux, \LaTeX}
 
-\section{Professional Affiliation}
+\section{Professional Affiliations}
 \cvitem{2014-present}{Cognitive Neuroscience Society}
 \cvitem{2015-present}{Cognitive Science Society}
 
