--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -26,13 +26,10 @@
 
 % personal data
 \name{Qihong}{Lu}
-% \title{Resumé title}                               % optional, remove / comment the line if not wanted
 % \address{street and number}{postcode city}{country}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
-\phone[mobile]{+1~(608)~335~2451}                   % optional, remove / comment the line if not wanted
-% \phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
-% \phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
-\email{qihong.lu@wisc.edu}                               % optional, remove / comment the line if not wanted
-% \homepage{qihongl.github.io}                         % optional, remove / comment the line if not wanted
+\phone[mobile]{+1~(608)~335~2451} 
+\email{qihong.lu@wisc.edu}
+% \homepage{qihongl.github.io}
 
 \extrainfo{
 Personal Page: \href{https://qihongl.github.io/}{https://qihongl.github.io/}
@@ -93,7 +90,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
 \cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
 \cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in mathematics.}
-\cventry{2016}{Undergraduate Travel Awards}{}{}{L\&S Honors Program}{}
+\cventry{2016}{Undergraduate Travel Awards}{}{}{Psychology Department}{}
 
 
 
