--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -89,7 +89,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
 \cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
 \cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
-\cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in mathematics.}
+\cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in physical sciences or mathematics.}
 \cventry{2016}{Undergraduate Travel Awards}{}{}{Psychology Department}{}
 
 
