--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -46,7 +46,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \makecvtitle
 
 \section{Education}
-\cventry{2013--2017}{B.S.}{}{University of Wisconsin-Madison}{Madison, WI, U.S.A.}{Major in Psychology \& Mathematics, Minor in Computer Science \\Comprehensive Honors\\Psi Chi, Phi Beta Kappa as a junior}  
+\cventry{2013--2017}{B.S.}{}{University of Wisconsin-Madison}{Madison, WI, U.S.A.}{Major in Psychology \& Mathematics, Minor in Computer Science \\Comprehensive Honors}  
 
 
 \section{Research Experience}
@@ -55,6 +55,8 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \cventry{2013-2015}{Research Assistant}{}{Language and Cognitive Neuroscience Lab}{}{P.I.: Dr. Maryellen MacDonald \& Dr. Mark Seidenberg, UW-Madison
 }
 \cventry{2014-present}{Research Assistant}{}{Knowledge and Concepts Lab}{}{P.I.: Dr. Timothy Rogers, UW-Madison
+}
+\cventry{2015}{Research Assistant}{}{Lupyan Lab}{}{P.I.: Dr. Gary Lupyan, UW-Madison
 }
 \cventry{Summer 2015 \& 2016}{Visiting Researcher}{}{The Parallel Distributed Processing Lab}{}{P.I.: Dr. James McClelland, Stanford University
 }
@@ -87,6 +89,7 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 \cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
 \cventry{2014}{Margaret and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
 \cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
+\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
 \cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
 \cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
 \cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in physical sciences or mathematics.}
@@ -95,12 +98,11 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 
 \section{Technical Skills}
-\cvitem{Advanced}{Matlab, Python, Java, GitHub}
-\cvitem{Intermediate}{R, LENS, SPSS, Linux, \LaTeX}
+\cvitem{Advanced}{Matlab, Python, GitHub}
+\cvitem{Intermediate}{Java, R, LENS, SPSS, Linux, \LaTeX}
 
-\section{Professional Affiliations}
-\cvitem{2014-present}{Cognitive Neuroscience Society}
-\cvitem{2015-present}{Cognitive Science Society}
+\section{Affiliations}
+\cvitem{Professional}{Cognitive Neuroscience Society, Cognitive Science Society}
 
 \section{Papers}
 \hangindent=0.7cm
