--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -50,59 +50,78 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 
 \section{Research Experience}
-\cventry{Summer 2013}{Research Intern}{}{Laboratory of Neural Coding}{}{P.I.: Dr. Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics
-}
-\cventry{2013-2015}{Research Assistant}{}{Language and Cognitive Neuroscience Lab}{}{P.I.: Dr. Maryellen MacDonald \& Dr. Mark Seidenberg, UW-Madison
-}
 \cventry{2014-present}{Research Assistant}{}{Knowledge and Concepts Lab}{}{P.I.: Dr. Timothy Rogers, UW-Madison
 }
-\cventry{2015}{Research Assistant}{}{Lupyan Lab}{}{P.I.: Dr. Gary Lupyan, UW-Madison
-}
+
 \cventry{Summer 2015 \& 2016}{Visiting Researcher}{}{The Parallel Distributed Processing Lab}{}{P.I.: Dr. James McClelland, Stanford University
 }
 
+\cventry{2013-2015}{Research Assistant}{}{Language and Cognitive Neuroscience Lab}{}{P.I.: Dr. Maryellen MacDonald \& Dr. Mark Seidenberg, UW-Madison
+}
+
+\cventry{2015}{Research Assistant}{}{Lupyan Lab}{}{P.I.: Dr. Gary Lupyan, UW-Madison
+}
+
+\cventry{Summer 2013}{Research Intern}{}{Laboratory of Neural Coding}{}{P.I.: Dr. Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics
+}
+
+
+
+
+
 
 \section{Extracurricular Activities}
+\cventry{2014-present}{Student Representative}{}{Letter \& Science Faculty Honors Committee}{}{
+\begin{itemize}%
+\item Discussing and revising academic policies and curriculum for the Honors program.
+\item Reviewing scholarship and research grant applications.
+\end{itemize}
+}
+
+\cventry{2013-2015}{Social Science Chair}{}{$\text{IV}\cdot\Omega$ Academic Society}{}{
+\begin{itemize}%
+\item Organized social science mini-lectures; presented recent advances in social science.
+\end{itemize}
+}
+
 \cventry{2013-2014}{Tutor}{}{Greater University Tutoring Service}{}{
 \begin{itemize}%
 \item Taught Calculus I/II and Introductory Biology.
 \end{itemize}
 }
 
-\cventry{2013-2014}{Social Science Chair}{}{$\text{IV}\cdot\Omega$ Academic Society}{}{
-\begin{itemize}%
-\item Organized social science mini-lectures; presented recent advances in social science.
-\end{itemize}
-}
 
-\cventry{2014-present}{Student Representative}{}{Letter \& Science Faculty Honors Committee}{}{
-\begin{itemize}%
-\item Discussing and revising academic policies and curriculum.
-\item Reviewing scholarship and research grant applications for undergraduate students.
-\end{itemize}
-}
+
+
 
 
 \section{Honors \& Awards}
-\cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{Psychology Department}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
-\cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{English Department}{}{}
-\cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
-\cventry{2014}{Margaret and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
-\cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
-\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
-\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
-\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
 \cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in physical sciences or mathematics.}
+
 \cventry{2016}{Undergraduate Travel Awards}{}{}{Psychology Department}{}
 
+\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
+
+\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
+
+\cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
+
+\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
+
+\cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{Psychology Department}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
+
+\cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{English Department}{}{}
+
+\cventry{2014}{Margaret and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
+
+\cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
 
 
-\section{Technical Skills}
-\cvitem{Advanced}{Matlab, Python, GitHub}
-\cvitem{Intermediate}{Java, R, LENS, SPSS, Linux, \LaTeX}
 
-\section{Affiliations}
-\cvitem{Professional}{Cognitive Neuroscience Society, Cognitive Science Society}
+
+
+
+
 
 \section{Papers}
 \hangindent=0.7cm
@@ -117,47 +136,71 @@ Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (manuscript in preparation). The r
 
 \section{Posters}
 \hangindent=0.7cm
-Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the 22\ts{nd} Cognitive Neuroscience Society annual conference, San Francisco, CA.
-
-\hangindent=0.7cm
-Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
-
-\hangindent=0.7cm
 \textbf{Lu, Q.}, \& Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. Poster to be presented at the 38\ts{th} Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
 
 \hangindent=0.7cm
 \textbf{Lu, Q.}, \& McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with ``social scaffolding''. Poster to be presented at the 15\ts{th} Neural Computation and Psychology Workshop, Philadelphia, PA.
 
+\hangindent=0.7cm
+Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the 22\ts{nd} Cognitive Neuroscience Society annual conference, San Francisco, CA.
+
+\hangindent=0.7cm
+Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
+
 
 \section{Talks}
 \hangindent=0.7cm
-\textbf{Lu, Q.}, \& Rogers, T. T. (2015). Modeling the temporal dynamics of human categorization behavior. Talk delivered at UW-Madison Undergraduate Research Symposium, Madison, WI.
+\textbf{Lu, Q.}, \& Rogers, T. T. (2016). A recurrent neural network for object recognition. Talk delivered at UW-Madison Senior Honors Thesis Symposium, Madison, WI.
 
 \hangindent=0.7cm
 \textbf{Lu, Q.}, \& McClelland, J.L. (2015). Teaching a PDP model to count. Talk delivered at Stanford Center of Study of Language and Information Summer Research Program Final Presentation, Stanford, CA. 
 
 \hangindent=0.7cm
-\textbf{Lu, Q.}, \& Rogers, T. T. (2016). A recurrent neural network for object recognition. Talk delivered at UW-Madison Senior Honors Thesis Symposium, Madison, WI.
+\textbf{Lu, Q.}, \& Rogers, T. T. (2015). Modeling the temporal dynamics of human categorization behavior. Talk delivered at UW-Madison Undergraduate Research Symposium, Madison, WI.
+
+
+
+
+\section{Technical Skills}
+\cvitem{Advanced}{Matlab, Python, GitHub}
+\cvitem{Intermediate}{Java, R, LENS, SPSS, Linux, \LaTeX}
+
+\section{Affiliations}
+\cvitem{Professional}{Cognitive Neuroscience Society, Cognitive Science Society}
+
+
 
 
 \section{Online Course Certificates}
-\cventry{2013}{Model Thinking}{Coursera}{}{University of Michigan}{}
-\cventry{2013}{Behavioral Economics in Action}{edX}{}{University of Toronto}{}
+
+\cventry{2016}{Statistical Learning}{Stanford Online}{}{Stanford University}{}
+\cventry{2016}{Build a Computer from 1\ts{st} Principles}{Coursera}{}{Hebrew University of Jerusalem}{}
+
+\cventry{2015}{The Brain and Space}{Coursera}{}{Duke University}{}
+
+\cventry{2014}{Machine Learning}{Coursera}{}{Stanford University}{}
 \cventry{2014}{Fundamentals of Neuroscience I}{edX}{}{Harvard University}{}
 \cventry{2014}{Introduction to Dynamical System and Chaos}{}{Santa Fe Institute}{}{}
+\cventry{2014}{Introduction to Complexity}{}{}{Santa Fe Institute}{}
 \cventry{2014}{Moralities of Everyday Life}{Coursera}{}{Yale University}{}
 \cventry{2014}{Statistical Analysis of fMRI Data}{Coursera}{}{Johns Hopkins University}{}
-\cventry{2014}{Introduction to Complexity}{}{}{Santa Fe Institute}{}
 \cventry{2014}{Justice}{edX}{}{Harvard University}{}
-\cventry{2014}{Machine Learning}{Coursera}{}{Stanford University}{}
+
 \cventry{2014}{Intro to Computer Science \& Programming Using Python}{Coursera}{}{MIT}{}
-\cventry{2015}{The Brain and Space}{Coursera}{}{Duke University}{}
-\cventry{2016}{Statistical Learning}{Stanford Online}{}{Stanford University}{}
-\cventry{2016}{Build a Computer from 1\ts{st} Principles}{Coursera}{}{Hebrew University of Jerusalem}{
+
+\cventry{2013}{Behavioral Economics in Action}{edX}{}{University of Toronto}{}
+\cventry{2013}{Model Thinking}{Coursera}{}{University of Michigan}{
 \begin{flushright}
 (Certificates available upon request)
 \end{flushright}
 }
+
+
+
+
+
+
+
 
 
 
