--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -32,9 +32,9 @@
 % \homepage{qihongl.github.io}
 
 \extrainfo{
-Personal Page: \href{https://qihongl.github.io/}{https://qihongl.github.io/}
+Personal webpage: \href{https://qihongl.github.io/}{https://qihongl.github.io/}
 \\
-Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
+GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
 }
 
 %----------------------------------------------------------------------------------
@@ -100,13 +100,13 @@ Github Page: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 \cventry{2016}{Undergraduate Travel Awards}{}{}{Psychology Department}{}
 
-\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
-
-\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
+\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
 
 \cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
 
-\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
+\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
+
+\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
 
 \cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{Psychology Department}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
 
@@ -165,8 +165,10 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cvitem{Advanced}{Matlab, Python, GitHub}
 \cvitem{Intermediate}{Java, R, LENS, SPSS, Linux, \LaTeX}
 
-\section{Affiliations}
-\cvitem{Professional}{Cognitive Neuroscience Society, Cognitive Science Society}
+\section{Professional Affiliations}
+\cvitem{2015-present}{Cognitive Science Society}
+\cvitem{2014-present}{Cognitive Neuroscience Society}
+
 
 
 
