correct award name

--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -112,7 +112,7 @@ GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 \cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{English Department}{}{}
 
-\cventry{2014}{Margaret and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
+\cventry{2014}{Margaret E. and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
 
 \cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
 
