--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -136,10 +136,10 @@ Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (manuscript in preparation). The r
 
 \section{Posters}
 \hangindent=0.7cm
-\textbf{Lu, Q.}, \& Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. Poster to be presented at the 38\ts{th} Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
+\textbf{Lu, Q.}, \& Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. Poster presented at the 38\ts{th} Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
 
 \hangindent=0.7cm
-\textbf{Lu, Q.}, \& McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with ``social scaffolding''. Poster to be presented at the 15\ts{th} Neural Computation and Psychology Workshop, Philadelphia, PA.
+\textbf{Lu, Q.}, \& McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with ``social scaffolding''. Poster presented at the 15\ts{th} Neural Computation and Psychology Workshop, Philadelphia, PA.
 
 \hangindent=0.7cm
 Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the 22\ts{nd} Cognitive Neuroscience Society annual conference, San Francisco, CA.
