--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -163,7 +163,7 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 \section{Technical Skills}
 \cvitem{Advanced}{Matlab, Python, GitHub}
-\cvitem{Intermediate}{Java, R, LENS, SPSS, Linux, \LaTeX}
+\cvitem{Intermediate}{Java, R, LENS, Linux Shell, \LaTeX}
 
 \section{Professional Affiliations}
 \cvitem{2015-present}{Cognitive Science Society}
@@ -171,6 +171,15 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 
+\section{Workshops Attended}
+
+\cventry{2017}{Data Carpentry Workshop}{}{}{UW-Madison}{}
+
+\cventry{2016}{Contemporary Deep Neural Network Models}{}{}{the 38\ts{th}  CogSci workshop}{}
+
+\cventry{2015}{Quantum Models of Cognition and Decision}{}{}{the 37\ts{th} CogSci workshop}{}
+
+\cventry{2014}{Growth Curve Analysis of Longitudinal Data}{}{}{UW-Madison}{}
 
 
 \section{Online Course Certificates}
