--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -132,7 +132,7 @@ GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
 McClelland, J.L., Mickey, K., Hansen S., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing approach to mathematical cognition. 
 
 \hangindent=0.7cm
-Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (manuscript in preparation). The role of transitional probability in reading Chinese. 
+Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese. 
 
 
 \section{Posters}
@@ -165,6 +165,12 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \section{Technical Skills}
 \cvitem{Advanced}{Matlab, Python, GitHub}
 \cvitem{Intermediate}{Java, R, LENS, Linux Shell, \LaTeX}
+
+
+\section{Mentoring}
+
+\cvitem{2016}{Molly Ryan, Assessing the localization of motion representation in the brain}
+
 
 \section{Professional Affiliations}
 \cvitem{2015-present}{Cognitive Science Society}
@@ -212,11 +218,4 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 
-
-
-
-
 \end{document}
-
-
-%% end of file `template.tex'.
