--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -22,47 +22,42 @@
 % adjust the page margins
 \usepackage[scale=0.75]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
-%\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
 % personal data
 \name{Qihong}{Lu}
-% \address{street and number}{postcode city}{country}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
-\phone[mobile]{+1~(608)~335~2451} 
-\email{qihong.lu@wisc.edu}
-% \homepage{qihongl.github.io}
+% \address{210 North Charter, Madison, WI, 53715}{}{}
+% \phone[mobile]{+1~(608)~335~2451} 
+\homepage{qihongl.github.io}
+\email{qihong.lu@princeton.edu}
 
-\extrainfo{
-Personal webpage: \href{https://qihongl.github.io/}{https://qihongl.github.io/}
-\\
-GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
-}
+% \extrainfo{Personal webpage: \href{https://qihongl.github.io/}{https://qihongl.github.io/}}
 
-%----------------------------------------------------------------------------------
-%            content
-%----------------------------------------------------------------------------------
+
 \begin{document}
-%\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
-%-----       resume       ---------------------------------------------------------
 \makecvtitle
 
 \section{Education}
-\cventry{2013--2017}{B.S.}{}{University of Wisconsin-Madison}{Madison, WI, U.S.A.}{Major in Psychology \& Mathematics, Minor in Computer Science \\Comprehensive Honors}  
+% \cventry{2017}{Ph.D.}{}{Psychology \& Neuroscience}{Princeton University}{Advisor: Kenneth Norman}  
+\cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Timothy Rogers}  
 
 
 \section{Research Experience}
-\cventry{2014-present}{Research Assistant}{}{Knowledge and Concepts Lab}{}{P.I.: Dr. Timothy Rogers, UW-Madison
+% \cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Kenneth Norman }
+
+\cventry{2014-present}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Timothy Rogers
 }
 
-\cventry{Summer 2015 \& 2016}{Visiting Researcher}{}{The Parallel Distributed Processing Lab}{}{P.I.: Dr. James McClelland, Stanford University
+\cventry{Summer 2015 \& 2016}{The Parallel Distributed Processing Lab}{}{}{Stanford University}{P.I.: James McClelland
 }
 
-\cventry{2013-2015}{Research Assistant}{}{Language and Cognitive Neuroscience Lab}{}{P.I.: Dr. Maryellen MacDonald \& Dr. Mark Seidenberg, UW-Madison
+
+\cventry{2013-2015}{Language and Cognitive Neuroscience Lab}{}{}{UW-Madison}{P.I.: Maryellen MacDonald \&  Mark Seidenberg
 }
 
-\cventry{2015}{Research Assistant}{}{Lupyan Lab}{}{P.I.: Dr. Gary Lupyan, UW-Madison
+\cventry{2015}{Lupyan Lab}{}{}{UW-Madison}{P.I.: Gary Lupyan
 }
 
-\cventry{Summer 2013}{Research Intern}{}{Laboratory of Neural Coding}{}{P.I.: Dr. Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics
+\cventry{Summer 2013}{Laboratory of Neural Coding}{}{}{Shanghai Key Lab of Brain Functional Genomics}{P.I.: Longnian Lin
 }
 
 
@@ -71,20 +66,15 @@ GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 
 \section{Extracurricular Activities}
-\cventry{2014-present}{Student Representative}{}{Letter \& Science Faculty Honors Committee}{}{
+
+\cventry{2014-2017}{Student Representative}{}{Faculty Honors Committee}{UW-Madison}{
 \begin{itemize}%
 \item Discussing and revising academic policies and curriculum for the Honors program.
 \item Reviewing scholarship and research grant applications.
 \end{itemize}
 }
 
-\cventry{2013-2015}{Social Science Chair}{}{$\text{IV}\cdot\Omega$ Academic Society}{}{
-\begin{itemize}%
-\item Organized social science mini-lectures; presented recent advances in social science.
-\end{itemize}
-}
-
-\cventry{2013-2014}{Tutor}{}{Greater University Tutoring Service}{}{
+\cventry{2013-2014}{Tutor}{}{Greater University Tutoring Service}{UW-Madison}{
 \begin{itemize}%
 \item Taught Calculus I/II and Introductory Biology.
 \end{itemize}
@@ -93,31 +83,33 @@ GitHub: \href{https://github.com/QihongL}{https://github.com/QihongL}
 
 
 
-
-
 \section{Honors \& Awards}
 
-\cventry{2016}{David H. Durra Scholarship}{}{}{College of L\&S}{High achieving student in physical sciences or mathematics.}
+\cventry{2017}{College of Letters \& Science Dean's Prize}{}{}{UW-Madison}{}
 
-\cventry{2016}{Undergraduate Travel Awards}{}{}{Psychology Department}{}
+\cventry{2017}{Undergraduate Academic Achievement Award}{}{}{UW-Madison}{}
 
-\cventry{2015}{Phi Beta Kappa as a junior}{}{}{Alpha Chapter of Wisconsin}{}
+\cventry{2017}{Outstanding Undergraduate Research Scholar Award}{}{}{UW-Madison}{}
 
-\cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{College of L\&S}{}
+\cventry{2016}{David H. Durra Scholarship}{}{}{UW-Madison}{High achieving student in physical sciences or mathematics.}
 
-\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{L\&S Honors Program}{}
+\cventry{2016}{Undergraduate Travel Awards}{}{}{UW-Madison}{}
 
-\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford University}{}
+\cventry{2015}{Phi Beta Kappa as a junior}{}{}{UW-Madison}{}
 
-\cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{Psychology Department}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
+\cventry{2015}{Hilldale Undergraduate Research Fellowship}{}{}{UW-Madison}{}
 
-\cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{English Department}{}{}
+\cventry{2015}{Bromley Research Conference Travel Grant}{}{}{UW-Madison}{}
 
-\cventry{2014}{Margaret E. and Allard Smith Scholarship}{}{}{College of L\&S}{High achieving 2\ts{nd} year student}
+\cventry{2015}{CSLI Summer Research Internship}{}{}{Stanford}{}
 
-\cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{L\&S Honors Program}{}
+\cventry{2014, 2015}{Undergraduate Research Scholar Award}{}{UW-Madison}{}{Nominated by Dr.Maryellen MacDonald \& Dr.Timothy Rogers}
 
+\cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{UW-Madison}{}{}
 
+\cventry{2014}{Margaret E. and Allard Smith Scholarship}{}{}{UW-Madison}{High achieving 2\ts{nd} year student}
+
+\cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{UW-Madison}{}
 
 
 
@@ -156,25 +148,20 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \hangindent=0.7cm
 \textbf{Lu, Q.}, \& McClelland, J.L. (2015). Teaching a PDP model to count. Talk delivered at Stanford Center of Study of Language and Information Summer Research Program Final Presentation, Stanford, CA. 
 
-\hangindent=0.7cm
-\textbf{Lu, Q.}, \& Rogers, T. T. (2015). Modeling the temporal dynamics of human categorization behavior. Talk delivered at UW-Madison Undergraduate Research Symposium, Madison, WI.
-
-
 
 
 \section{Technical Skills}
-\cvitem{Advanced}{Matlab, Python, GitHub}
-\cvitem{Intermediate}{Java, R, LENS, Linux Shell, \LaTeX}
+\cvitem{}{Matlab, Python, R, Java, GitHub, LENS, Linux Shell, \LaTeX}
 
 
-\section{Mentoring}
 
-\cvitem{2016}{Molly Ryan, Assessing the localization of motion representation in the brain}
+\section{Undergraduate Mentoring}
+\cvitem{2016}{Molly Ryan, UW-Madison. Assessing the localization of motion representation in the brain}
 
 
 \section{Professional Affiliations}
-\cvitem{2015-present}{Cognitive Science Society}
-\cvitem{2014-present}{Cognitive Neuroscience Society}
+\cvitem{}{Cognitive Science Society}
+\cvitem{}{Cognitive Neuroscience Society}
 
 
 
@@ -203,16 +190,13 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cventry{2014}{Moralities of Everyday Life}{Coursera}{}{Yale University}{}
 \cventry{2014}{Statistical Analysis of fMRI Data}{Coursera}{}{Johns Hopkins University}{}
 \cventry{2014}{Justice}{edX}{}{Harvard University}{}
-
 \cventry{2014}{Intro to Computer Science \& Programming Using Python}{Coursera}{}{MIT}{}
-
 \cventry{2013}{Behavioral Economics in Action}{edX}{}{University of Toronto}{}
 \cventry{2013}{Model Thinking}{Coursera}{}{University of Michigan}{
 \begin{flushright}
 (Certificates available upon request)
 \end{flushright}
 }
-
 
 
 
