--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -44,7 +44,7 @@
 \section{Research Experience}
 % \cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Kenneth Norman }
 
-\cventry{2014-present}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Timothy Rogers
+\cventry{2014-2017}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Timothy Rogers
 }
 
 \cventry{Summer 2015 \& 2016}{The Parallel Distributed Processing Lab}{}{}{Stanford University}{P.I.: James McClelland
