--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -25,10 +25,10 @@
 
 % personal data
 \name{Qihong}{Lu}
-% \address{210 North Charter, Madison, WI, 53715}{}{}
+\address{Princeton Neuroscience Institute, 136D\\ Princeton University\\ Princeton, NJ 08540\\\\}{}{}
 % \phone[mobile]{+1~(608)~335~2451} 
 \homepage{qihongl.github.io}
-\email{qihong.lu@princeton.edu}
+\email{qlu@princeton.edu}
 
 % \extrainfo{Personal webpage: \href{https://qihongl.github.io/}{https://qihongl.github.io/}}
 
@@ -37,17 +37,17 @@
 \makecvtitle
 
 \section{Education}
-% \cventry{2017}{Ph.D.}{}{Psychology \& Neuroscience}{Princeton University}{Advisor: Kenneth Norman}  
-\cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Timothy Rogers}  
+\cventry{2017-present}{Ph.D.}{}{Psychology}{Princeton University}{Advisor: Ken Norman}  
+\cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Tim Rogers}  
 
 
 \section{Research Experience}
-% \cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Kenneth Norman }
+\cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Ken Norman}
 
-\cventry{2014-2017}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Timothy Rogers
+\cventry{2014-2017}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Tim Rogers
 }
 
-\cventry{Summer 2015 \& 2016}{The Parallel Distributed Processing Lab}{}{}{Stanford University}{P.I.: James McClelland
+\cventry{Summer 2015 \& 2016}{The Parallel Distributed Processing Lab}{}{}{Stanford University}{P.I.: Jay McClelland
 }
 
 
@@ -151,7 +151,7 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 \section{Technical Skills}
-\cvitem{}{Matlab, Python, R, Java, GitHub, LENS, Linux Shell, \LaTeX}
+\cvitem{}{Matlab, Python, R, Java, GitHub, LENS, \LaTeX}
 
 
 
@@ -162,6 +162,8 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \section{Professional Affiliations}
 \cvitem{}{Cognitive Science Society}
 \cvitem{}{Cognitive Neuroscience Society}
+\cvitem{}{ReScience}
+
 
 
 
@@ -197,8 +199,8 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 (Certificates available upon request)
 \end{flushright}
 }
-
-
+\iffalse
+\fi 
 
 
 
