update contact info

--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -25,10 +25,10 @@
 
 % personal data
 \name{Qihong}{Lu}
-\address{Princeton Neuroscience Institute, 136D\\ Princeton University\\ Princeton, NJ 08540\\\\}{}{}
+\address{136D, Princeton Neuroscience Institute\\ Princeton University\\ Princeton, NJ 08540\\\\}{}{}
 % \phone[mobile]{+1~(608)~335~2451} 
 \homepage{qihongl.github.io}
-\email{qlu@princeton.edu}
+\email{qlu at princeton.edu}
 
 % \extrainfo{Personal webpage: \href{https://qihongl.github.io/}{https://qihongl.github.io/}}
 
@@ -37,12 +37,14 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2017-present}{Ph.D.}{}{Psychology}{Princeton University}{Advisor: Ken Norman}  
+\cventry{2017-present}{Ph.D.}{}{Psychology}{Princeton University}{Advisor: Ken Norman, Uri Hasson}  
 \cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Tim Rogers}  
 
 
 \section{Research Experience}
-\cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Ken Norman}
+% \cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Ken Norman}
+
+% \cventry{2017-present}{Hasson Lab}{}{}{Princeton University}{P.I.: Uri Hasson}
 
 \cventry{2014-2017}{Knowledge and Concepts Lab}{}{}{UW-Madison}{P.I.: Tim Rogers
 }
@@ -51,10 +53,10 @@
 }
 
 
-\cventry{2013-2015}{Language and Cognitive Neuroscience Lab}{}{}{UW-Madison}{P.I.: Maryellen MacDonald \&  Mark Seidenberg
+\cventry{2015}{Lupyan Lab}{}{}{UW-Madison}{P.I.: Gary Lupyan
 }
 
-\cventry{2015}{Lupyan Lab}{}{}{UW-Madison}{P.I.: Gary Lupyan
+\cventry{2013-2015}{Language and Cognitive Neuroscience Lab}{}{}{UW-Madison}{P.I.: Maryellen MacDonald \&  Mark Seidenberg
 }
 
 \cventry{Summer 2013}{Laboratory of Neural Coding}{}{}{Shanghai Key Lab of Brain Functional Genomics}{P.I.: Longnian Lin
@@ -107,7 +109,7 @@
 
 \cventry{2014}{International Undergraduate Writing Contest 3\ts{rd} Place}{}{UW-Madison}{}{}
 
-\cventry{2014}{Margaret E. and Allard Smith Scholarship}{}{}{UW-Madison}{High achieving 2\ts{nd} year student}
+\cventry{2014}{Margaret E. and Allard Smith Scholarship}{}{}{UW-Madison}{}
 
 \cventry{2014}{Welton Summer Sophomore Research Grant}{}{}{UW-Madison}{}
 
@@ -160,15 +162,13 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 \section{Professional Affiliations}
+\cvitem{}{Society for Neuroscience}
 \cvitem{}{Cognitive Science Society}
 \cvitem{}{Cognitive Neuroscience Society}
-\cvitem{}{ReScience}
-
-
-
+\cvitem{}{ReScience, ad hoc review}
 
 \section{Workshops Attended}
-
+\cventry{2017}{Mixed Model Workshop}{}{}{Princeton}{}
 \cventry{2017}{Data Carpentry Workshop}{}{}{UW-Madison}{}
 
 \cventry{2016}{Contemporary Deep Neural Network Models}{}{}{the 38\ts{th}  CogSci workshop}{}
@@ -179,8 +179,11 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 \section{Online Course Certificates}
-
-\cventry{2016}{Statistical Learning}{Stanford Online}{}{Stanford University}{}
+\cventry{2017}{Structuring Machine Learning Projects}{}{}{deeplearning.ai}{}
+\cventry{2017}{Hyperparameter tuning, Regularization and Optimization}{}{}{deeplearning.ai}{}
+\cventry{2017}{Neural Networks and Deep Learning}{}{}{deeplearning.ai}{}
+\cventry{2017}{Principles of fMRI 1}{Coursera}{}{Johns Hopkins \& Colorado Boulder}{}
+\cventry{2016}{Statistical Learning}{}{Stanford Online}{}{}
 \cventry{2016}{Build a Computer from 1\ts{st} Principles}{Coursera}{}{Hebrew University of Jerusalem}{}
 
 \cventry{2015}{The Brain and Space}{Coursera}{}{Duke University}{}
