--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -41,7 +41,7 @@
 \cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Tim Rogers}  
 
 
-\section{Research Experience}
+\section{Undergraduate Research Experience}
 % \cventry{2017-present}{Princeton Computational Memory Lab}{}{}{Princeton University}{P.I.: Ken Norman}
 
 % \cventry{2017-present}{Hasson Lab}{}{}{Princeton University}{P.I.: Uri Hasson}
@@ -120,13 +120,15 @@
 
 \section{Papers}
 \hangindent=0.7cm
+
 \textbf{Lu, Q.}, Cox, C., Rogers, T. T., Lambon Ralph, M., \& Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
 
 \hangindent=0.7cm
-McClelland, J.L., Mickey, K., Hansen S., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing approach to mathematical cognition. 
+% McClelland, J.L., Mickey, K., Hansen S., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing approach to mathematical cognition. 
 
 \hangindent=0.7cm
 Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese. 
+
 
 
 \section{Posters}
@@ -153,7 +155,7 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 \section{Technical Skills}
-\cvitem{}{Matlab, Python, R, Java, GitHub, LENS, \LaTeX}
+\cvitem{}{Matlab, Python, R, Java, GitHub, LENS,  \LaTeX}
 
 
 
