--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -120,11 +120,10 @@
 
 \section{Papers}
 \hangindent=0.7cm
-
 \textbf{Lu, Q.}, Cox, C., Rogers, T. T., Lambon Ralph, M., \& Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
 
 \hangindent=0.7cm
-% McClelland, J.L., Mickey, K., Hansen S., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing approach to mathematical cognition. 
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing Approach to Mathematical Cognition.
 
 \hangindent=0.7cm
 Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese. 
