--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -120,7 +120,9 @@
 
 \section{Papers}
 \hangindent=0.7cm
-\textbf{Lu, Q.}, Cox, C., Rogers, T. T., Lambon Ralph, M., \& Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
+
+
+\textbf{Lu, Q.}, Cox, C., Takahashi R., Lambon Ralph, M., \& Rogers, T. T. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
 
 \hangindent=0.7cm
 McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing Approach to Mathematical Cognition.
@@ -166,6 +168,7 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cvitem{}{Society for Neuroscience}
 \cvitem{}{Cognitive Science Society}
 \cvitem{}{Cognitive Neuroscience Society}
+\cvitem{}{Association for Psychological Science}
 \cvitem{}{ReScience, ad hoc review}
 
 \section{Workshops Attended}
