--- a/myDocs/mycv/CV_QL.tex
+++ b/myDocs/mycv/CV_QL.tex
@@ -37,8 +37,11 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2017-present}{Ph.D.}{}{Psychology}{Princeton University}{Advisor: Ken Norman, Uri Hasson}  
-\cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}{Comprehensive Honors; Certificate in Computer Science \\ Advisor: Tim Rogers}  
+\cventry{2017-present}{Ph.D.}{}{Psychology}{Princeton University}
+{Advisors: Ken Norman, Uri Hasson}
+
+\cventry{2013-2017}{B.S.}{}{Psychology \& Mathematics}{University of Wisconsin-Madison}
+{Comprehensive Honors; Certificate in Computer Science \\Advisor: Tim Rogers}  
 
 
 \section{Undergraduate Research Experience}
@@ -63,24 +66,6 @@
 }
 
 
-
-
-
-
-\section{Extracurricular Activities}
-
-\cventry{2014-2017}{Student Representative}{}{Faculty Honors Committee}{UW-Madison}{
-\begin{itemize}%
-\item Discussing and revising academic policies and curriculum for the Honors program.
-\item Reviewing scholarship and research grant applications.
-\end{itemize}
-}
-
-\cventry{2013-2014}{Tutor}{}{Greater University Tutoring Service}{UW-Madison}{
-\begin{itemize}%
-\item Taught Calculus I/II and Introductory Biology.
-\end{itemize}
-}
 
 
 
@@ -117,21 +102,6 @@
 
 
 
-
-\section{Papers}
-\hangindent=0.7cm
-
-
-\textbf{Lu, Q.}, Cox, C., Takahashi R., Lambon Ralph, M., \& Rogers, T. T. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
-
-\hangindent=0.7cm
-McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., \& \textbf{Lu, Q.} (manuscript in preparation). A Parallel-Distributed Processing Approach to Mathematical Cognition.
-
-\hangindent=0.7cm
-Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese. 
-
-
-
 \section{Posters}
 \hangindent=0.7cm
 \textbf{Lu, Q.}, \& Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. Poster presented at the 38\ts{th} Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
@@ -145,6 +115,18 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \hangindent=0.7cm
 Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
 
+\section{Papers}
+\hangindent=0.7cm
+\textbf{Lu, Q.}, Cox, C., Takahashi R., Lambon Ralph, M., \& Rogers, T. T. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition processes.
+
+\hangindent=0.7cm
+Wang, T., \textbf{Lu, Q.} \& Seidenberg, M.S. (submitted). The role of transitional probability in reading Chinese. 
+
+\hangindent=0.7cm
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., \& \textbf{Lu, Q.} (2016). A Parallel-Distributed Processing Approach to Mathematical Cognition.
+
+
+
 
 \section{Talks}
 \hangindent=0.7cm
@@ -155,13 +137,28 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 
 
 
-\section{Technical Skills}
-\cvitem{}{Matlab, Python, R, Java, GitHub, LENS,  \LaTeX}
+\section{Extracurricular Activities}
 
+\cventry{2014-2017}{Student Representative}{}{Faculty Honors Committee}{UW-Madison}{
+\begin{itemize}%
+\item Discussing and revising academic policies and curriculum for the Honors program.
+\item Reviewing scholarship and research grant applications.
+\end{itemize}
+}
+
+\cventry{2013-2014}{Tutor}{}{Greater University Tutoring Service}{UW-Madison}{
+\begin{itemize}%
+\item Taught Calculus I/II and Introductory Biology.
+\end{itemize}
+}
 
 
 \section{Undergraduate Mentoring}
 \cvitem{2016}{Molly Ryan, UW-Madison. Assessing the localization of motion representation in the brain}
+
+
+
+\iffalse
 
 
 \section{Professional Affiliations}
@@ -170,6 +167,13 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cvitem{}{Cognitive Neuroscience Society}
 \cvitem{}{Association for Psychological Science}
 \cvitem{}{ReScience, ad hoc review}
+
+
+
+
+\section{Technical Skills}
+\cvitem{}{Matlab, Python, R, Java, GitHub, LENS,  \LaTeX}
+
 
 \section{Workshops Attended}
 \cventry{2017}{Mixed Model Workshop}{}{}{Princeton}{}
@@ -182,7 +186,10 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 \cventry{2014}{Growth Curve Analysis of Longitudinal Data}{}{}{UW-Madison}{}
 
 
+
 \section{Online Course Certificates}
+\cventry{2018}{Sequence Models}{}{}{deeplearning.ai}{}
+\cventry{2018}{Convolutional Neural Networks}{}{}{deeplearning.ai}{}
 \cventry{2017}{Structuring Machine Learning Projects}{}{}{deeplearning.ai}{}
 \cventry{2017}{Hyperparameter tuning, Regularization and Optimization}{}{}{deeplearning.ai}{}
 \cventry{2017}{Neural Networks and Deep Learning}{}{}{deeplearning.ai}{}
@@ -206,7 +213,7 @@ Cox, C. R., \textbf{Lu, Q.}, \& Rogers, T. T. (2015). Iterative Lasso: An even-h
 (Certificates available upon request)
 \end{flushright}
 }
-\iffalse
+
 \fi 
 
 
